feat: update Ember 4 support
BREAKING CHANGE: update Ember 4 dependencies

--- a/tests/index.html
+++ b/tests/index.html
@@ -30,7 +30,9 @@
 
     <script src="/testem.js" integrity="" data-embroider-ignore></script>
     <script src="{{rootURL}}assets/vendor.js"></script>
+    <auto-import-script entrypoint="app"></auto-import-script>
     <script src="{{rootURL}}assets/test-support.js"></script>
+    <auto-import-script entrypoint="tests"></auto-import-script>
     <script src="{{rootURL}}assets/dummy.js"></script>
     <script src="{{rootURL}}assets/tests.js"></script>
 
